--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2423,6 +2423,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		overflow: hidden;
 	}
 
 		.image img {
